# c-c-tasks

labs-prozorova-hw-02_huffman-hw-02_huffman 2/hw-02_huffman/: CMakeLists.txt
labs-prozorova-hw-02_huffman-hw-02_huffman 2/hw-02_huffman/include/: huff_archiver.h  huff_tree.h
labs-prozorova-hw-02_huffman-hw-02_huffman 2/hw-02_huffman/src/: huff_archiver.cpp  huff_tree.cpp  main.cpp
labs-prozorova-hw-02_huffman-hw-02_huffman 2/hw-02_huffman/test/: test.cpp
labs-prozorova-lab-02_cstrings___-lab-02_cstrings/lab-02_cstrings/: Makefile
labs-prozorova-lab-03_mergesort-lab-03_mergesort/lab-03_mergesort/: Makefile
labs-prozorova-lab-04_intrusive-list-lab-04_intrusive-list/lab-04_intrusive-list/: Makefile
labs-prozorova-lab-05_c-io-lab-05_c-io/lab-05_c-io/: Makefile
labs-prozorova-lab-06_int-vector-lab-06_int-vector/lab-06_int-vector/: CMakeLists.txt
labs-prozorova-lab-06_int-vector-lab-06_int-vector/lab-06_int-vector/include/: my_vector.hpp
labs-prozorova-lab-06_int-vector-lab-06_int-vector/lab-06_int-vector/src/: my_vector.cpp
labs-prozorova-lab-07_matrix-lab-07_matrix/lab-07_matrix/: CMakeLists.txt
labs-prozorova-lab-10_cppio-lab-10_cppio/lab-10_cppio/: CMakeLists.txt
labs-prozorova-lab-10_cppio-lab-10_cppio/lab-10_cppio/include/: bin_manip.h  employees.h
labs-prozorova-lab-10_cppio-lab-10_cppio/lab-10_cppio/src/: bin_manip.cpp
labs-prozorova-lab-11_vector-lab-11_vector/lab-11_vector/: CMakeLists.txt
labs-prozorova-lab-12_exceptions-lab-12_exceptions/lab-12_exceptions/: CMakeLists.txt
(+41 files in other folders)
